# estrg

./: CHANGELOG.md  LICENSE  README.md  estrg.cabal  flake.nix  ifd.nix
app/: Main.hs
src/: Estrg.hs
src/Estrg/: Prelude.hs
test/: Main.hs
